

Directory libperl/AsimShell/lib/AsimShell
 Commands.pm               Locally Modified          249 

Directory libperl/Asim/lib/Asim
 Inifile.pm                Locally Modified          249 
 Fork.pm                   Locally Modified          249 

Directory tools/scripts
 asim-run                  Locally Modified          249 

Updating with simcore changes (rev. 2577 - Joel Emer)

In asim-shell, have 'update package' build using the common
configure_and_build_packages subroutine. This routine
includes properly ordering builds by package priority.

In Fork.pm, open child's STDOUT/STDERR logfile in a way
that preserves the redirection in subprocesses of the child.
Also, added a convenience predicate argument in the
controlled_fork and controlled_exit routines.

In asim-run, use the new interface to controlled_fork and
controlled_exit and properly reset the $exit_code value
on entry to a child, so that a pending error code in the
parent isn't propagated to all the children.

In Inifile.pm, fix a minor bug in the perldoc directives.

----------
spartha1    Date: Mon Jun  2 17:19:59 EDT 2008  CSN: CSN-asimcore-251
                  Mon Jun  2 21:19:59 UTC 2008


Directory tools/scripts
 asim-batch                Locally Modified          250 

Updating with simcore changes (rev. 2578 - Joel Emer)

Report environment variables that are supposed to be retained but
that are not defined.

----------
emer        Date: Wed Jun 11 16:07:20 EDT 2008  CSN: CSN-asimcore-252
                  Wed Jun 11 20:07:20 UTC 2008


Directory etc
 asim.pack                 Locally Modified          251 

Directory etc/repositories.d
 h264.pack                 Locally Added               0 
 ofdm.pack                 Locally Added               0 
 hasim.pack                Locally Added               0 

Created repository information for hasim-model and h264
repositories. Reorganized repository information into
separate files for different projects.